fixed 1px spacing issue

--- a/projects/OG-Web/web-engine/prototype/styles/common/slickgrid/og.common.slickgrid.css
+++ b/projects/OG-Web/web-engine/prototype/styles/common/slickgrid/og.common.slickgrid.css
@@ -81,7 +81,7 @@
 .slick-header {
   position: relative;
   background: #a3ceec;
-  height: 29px;
+  height: 30px;
   margin: 0 -2px;
   padding: 0 4px 2px 0;
   border-bottom: 1px solid #fff;
